--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="prestasi.html">Prestasi</a></li>
-                    <li><a href="galery.html">Galery</a></li>
+                    <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
@@ -56,8 +55,7 @@
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="prestasi.html">Prestasi</a></li>
-            <li><a href="galery.html">Galery</a></li>
+            <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
@@ -88,7 +86,7 @@
 
 
 
-        <section class="containerFitur bg-agakGelap pt-50 pb-50">
+        <section class="containerFitur bg-agakGelap pt-50 pb-100">
             <div class="container">
                 <div class="title">
                     <h1>HMJ MI STMIK AKAKOM</h1>
