Membuat halaman detailEvent

--- a/event.html
+++ b/event.html
@@ -206,7 +206,7 @@
 
                             </div>
 
-                            <div class="btn">
+                            <div class="btnEvent">
                                 <button type="submit">Terapkan Filter</button>
                                 <button type="submit">Hapus</button>
                             </div>
@@ -245,7 +245,7 @@
 
                             <h3>Rp 25.000</h3>
 
-                            <div class="btn">
+                            <div class="btnEvent">
                                 <button>Daftar Event</button>
                             </div>
                         </a>
@@ -270,7 +270,7 @@
 
                             <h3>Rp 25.000</h3>
 
-                            <div class="btn">
+                            <div class="btnEvent">
                                 <button>Daftar Event</button>
                             </div>
                         </a>
@@ -295,7 +295,7 @@
 
                             <h3>Rp 25.000</h3>
 
-                            <div class="btn">
+                            <div class="btnEvent">
                                 <button>Daftar Event</button>
                             </div>
                         </a>
@@ -320,7 +320,7 @@
 
                             <h3>Rp 25.000</h3>
 
-                            <div class="btn">
+                            <div class="btnEvent">
                                 <button>Daftar Event</button>
                             </div>
                         </a>
@@ -346,7 +346,7 @@
 
                             <h3>Rp 25.000</h3>
 
-                            <div class="btn">
+                            <div class="btnEvent">
                                 <button>Daftar Event</button>
                             </div>
                         </a>
@@ -370,7 +370,7 @@
 
                             <h3>Rp 25.000</h3>
 
-                            <div class="btn">
+                            <div class="btnEvent">
                                 <button>Daftar Event</button>
                             </div>
                         </a>
@@ -518,7 +518,7 @@
                                 </div>
                             </div>
 
-                            <div class="btn">
+                            <div class="btnEvent">
                                 <button type="submit">Hapus</button>
                                 <button type="submit">Terapkan Filter</button>
                             </div>
@@ -574,7 +574,7 @@
 
                         <h3>Rp 25.000</h3>
 
-                        <div class="btn">
+                        <div class="btnEvent">
                             <button>Daftar Event</button>
                         </div>
                     </a>
@@ -597,54 +597,7 @@
 
                         <h3>Rp 25.000</h3>
 
-                        <div class="btn">
-                            <button>Daftar Event</button>
-                        </div>
-                    </a>
-
-
-
-                    <a href="detailEvent.html" class="perMasihBerlangsung">
-                        <img src="img/galeri/calendar-works.jpg" alt="img event">
-                        <h2>Membangun Form & Melakukan Integration Testing dengan JavaScript & ReactJS</h2>
-                        <p>
-                            Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun menggunakan
-                            React?
-                        </p>
-
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
-
-                        <h3>Rp 25.000</h3>
-
-                        <div class="btn">
-                            <button>Daftar Event</button>
-                        </div>
-                    </a>
-
-
-                    <a href="detailEvent.html" class="perMasihBerlangsung">
-                        <img src="img/galeri/calendar-works.jpg" alt="img event">
-                        <h2>Membangun Form & Melakukan Integration Testing dengan JavaScript & ReactJS</h2>
-                        <p>
-                            Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun menggunakan
-                            React?
-                        </p>
-
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
-
-                        <h3>Rp 25.000</h3>
-
-                        <div class="btn">
+                        <div class="btnEvent">
                             <button>Daftar Event</button>
                         </div>
                     </a>
@@ -668,7 +621,30 @@
 
                         <h3>Rp 25.000</h3>
 
-                        <div class="btn">
+                        <div class="btnEvent">
+                            <button>Daftar Event</button>
+                        </div>
+                    </a>
+
+
+                    <a href="detailEvent.html" class="perMasihBerlangsung">
+                        <img src="img/galeri/calendar-works.jpg" alt="img event">
+                        <h2>Membangun Form & Melakukan Integration Testing dengan JavaScript & ReactJS</h2>
+                        <p>
+                            Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun menggunakan
+                            React?
+                        </p>
+
+                        <div class="date">
+                            <div class="icon">
+                                <i class="fas fa-calendar-alt"></i>
+                            </div>
+                            <p>Minggu, 22 November 2020</p>
+                        </div>
+
+                        <h3>Rp 25.000</h3>
+
+                        <div class="btnEvent">
                             <button>Daftar Event</button>
                         </div>
                     </a>
@@ -692,7 +668,31 @@
 
                         <h3>Rp 25.000</h3>
 
-                        <div class="btn">
+                        <div class="btnEvent">
+                            <button>Daftar Event</button>
+                        </div>
+                    </a>
+
+
+
+                    <a href="detailEvent.html" class="perMasihBerlangsung">
+                        <img src="img/galeri/calendar-works.jpg" alt="img event">
+                        <h2>Membangun Form & Melakukan Integration Testing dengan JavaScript & ReactJS</h2>
+                        <p>
+                            Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun menggunakan
+                            React?
+                        </p>
+
+                        <div class="date">
+                            <div class="icon">
+                                <i class="fas fa-calendar-alt"></i>
+                            </div>
+                            <p>Minggu, 22 November 2020</p>
+                        </div>
+
+                        <h3>Rp 25.000</h3>
+
+                        <div class="btnEvent">
                             <button>Daftar Event</button>
                         </div>
                     </a>
@@ -715,7 +715,7 @@
 
                         <h3>Rp 25.000</h3>
 
-                        <div class="btn">
+                        <div class="btnEvent">
                             <button>Daftar Event</button>
                         </div>
                     </a>
@@ -766,7 +766,7 @@
                 </div>
 
                 <div class="cta">
-                    <a href="contact.html" class="btn btn-primary">Hubungi</a>
+                    <a href="contact.html" class="btnEvent btnEvent-primary">Hubungi</a>
                 </div>
             </div>
         </section>
