Membuat halaman visiMisi

--- a/event.html
+++ b/event.html
@@ -36,8 +36,8 @@
 
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="event.html">Event</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="event.html" class="active">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
@@ -54,8 +54,8 @@
 
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="event.html">Event</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="event.html" class="active">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
@@ -766,7 +766,7 @@
                 </div>
 
                 <div class="cta">
-                    <a href="contact.html" class="btnEvent btnEvent-primary">Hubungi</a>
+                    <a href="contact.html" class="btn btn-primary">Hubungi</a>
                 </div>
             </div>
         </section>
