--- a/visiMisi.html
+++ b/visiMisi.html
@@ -9,14 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HMJ - Manajemen Informatika">
     <meta name="description" content="HMJ - Manajemen Informatika">
-    <title>Community | HMJ - Manajemen Informatika</title>
+    <title>Privacy Policy | HMJ - Manajemen Informatika</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/table/table.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
-
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
 
     <script src="js/script.js" defer></script>
 
@@ -35,7 +33,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="event.html">Event</a></li>
+                    <li><a href="prestasi.html">Prestasi</a></li>
+                    <li><a href="galery.html">Galery</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
@@ -53,7 +52,8 @@
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
-            <li><a href="event.html">Event</a></li>
+            <li><a href="prestasi.html">Prestasi</a></li>
+            <li><a href="galery.html">Galery</a></li>
             <li><a href="artikel.html">Artikel</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
@@ -62,97 +62,51 @@
 
     <main>
 
-        <section class="comunity pt-15-vh mb-100">
+
+        <section class="VisiMisi pt-15-vh pb-100">
             <div class="container">
+                <h1 class="text-center mb-50">Visi & Misi</h1>
+                <h2>Visi</h2>
 
-                <a href="" class="perComunity facebook">
+                <p class="visi">
+                    "Menjadikan HMJ Manajemen Informatika sebagai organisasi yang komunikatif serta menjujung
+                    tinggi
+                    profesionalitas dan kekeluargaan"
+                </p>
 
-                    <div class="icon">
-                        <i class="fab fa-facebook"></i>
-                    </div>
+                <h2>Misi</h2>
+                <ul>
+                    <li>
+                        Berkontribusi sebagai wadah dan penyalur aspirasi non akademik (bakat minat) dan potensi
+                        akademik mahasiswa manajemen informatika di berbagai kegiatan. Baik kegiatan didalam maupun luar
+                        kampus.
+                    </li>
 
-                    <div class="caption">
+                    <li>
+                        Berperan dalam mempererat kekeluargaan antar sesama pengurus HMJ Manajemen Informatika maupun
+                        seluruh masyarakat manajemen informatika.
+                    </li>
 
-                        <strong class="text-white">Facebook</strong>
-                        <p class="text-white">
-                            Sukai Facebook kami untuk mendapatkan update terbaru
-                        </p>
-                    </div>
-                </a>
+                    <li>
+                        Mengembangkan jiwa profesionalitas dalam pelaksanaan kegiatan HMJ Manajemen Informatika.
+                    </li>
 
-                <a href="" class="perComunity discord">
-                    <div class="icon">
-                        <i class="fab fa-discord"></i>
-                    </div>
+                    <li>
+                        Mengoptimalkan fungsi-fungsional setiap Departemen dan Menyeleggarakan kegiatan yang mendukung
+                        tercapainya Mahasiswa Manajemen Informatika yang aktif.
+                    </li>
 
-                    <div class="caption">
+                    <li>
+                        Menjalin hubungan yang baik dengan cara memperluas jaringan dengan civitas akademika dan
+                        organisasi atau lembaga lain, baik didalam maupun diluar Manajemen Informatika STMIK AKAKOM
+                        Yogyakarta.
+                    </li>
 
-                        <strong class="text-white">Discord</strong>
-                        <p class="text-white">
-                            Ingin diskusi? silahkan gabung ke discord kami
-                        </p>
-                    </div>
-                </a>
-
-                <a href="" class="perComunity twitter">
-                    <div class="icon">
-                        <i class="fab fa-twitter"></i>
-                    </div>
-
-                    <div class="caption">
-
-                        <strong class="text-white">Twitter</strong>
-                        <p class="text-white">
-                            Ikuti Twitter kami untuk mendapatkan update terbaru
-                        </p>
-                    </div>
-                </a>
-
-                <a href="" class="perComunity youtube">
-                    <div class="icon">
-                        <i class="fab fa-youtube"></i>
-                    </div>
-
-                    <div class="caption">
-
-                        <strong class="text-white">Youtube</strong>
-                        <p class="text-white">
-                            Subscribe dan nikmati semua pelajaran setiap hari di youtube
-                        </p>
-                    </div>
-                </a>
-
-
-                <a href="" class="perComunity instagram">
-                    <div class="icon">
-                        <i class="fab fa-instagram"></i>
-                    </div>
-
-                    <div class="caption">
-
-                        <strong class="text-white">Instagram</strong>
-                        <p class="text-white">
-                            Ikuti Instagram kami untuk mendapatkan update pada setiap seri terbaru
-                        </p>
-                    </div>
-                </a>
-
-                <a href="" class="perComunity telegram">
-                    <div class="icon">
-                        <i class="fab fa-telegram"></i>
-                    </div>
-
-                    <div class="caption">
-
-                        <strong class="text-white">Telegram</strong>
-                        <p class="text-white">
-                            Gabung Telegram kami untuk mendapatkan update pada setiap seri terbaru
-                        </p>
-                    </div>
-                </a>
+                </ul>
 
             </div>
         </section>
+
 
 
         <section class="containerClient pb-100 pt-50">
@@ -233,6 +187,7 @@
             </div>
         </section>
 
+
     </main>
 
     <footer>
@@ -240,19 +195,6 @@
             <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
-
-
-    <!-- <div class="modalContainer">
-        <div class="modal">
-            <div class="modal-title">
-
-            </div>
-            <div class="modal-body"></div>
-            <div class="modal-footer"></div>
-        </div>
-    </div> -->
-
-
 
 </body>
 
