--- a/detailEvent.html
+++ b/detailEvent.html
@@ -16,11 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
-
     <script src="js/script.js" defer></script>
-    <script src="js/event.js" defer></script>
 
     <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
     <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
@@ -218,7 +214,7 @@
                 </div>
 
                 <div class="cta">
-                    <a href="contact.html" class="btnEvent btnEvent-primary">Hubungi</a>
+                    <a href="contact.html" class="btn btn-primary">Hubungi</a>
                 </div>
             </div>
         </section>
