Meresponsivekan halaman DetailEvent

--- a/detailEvent.html
+++ b/detailEvent.html
@@ -65,15 +65,18 @@
             <div class="container">
 
                 <div class="caption">
-                    <h1>Membangun Forum Dengan TDD</h1>
+                    <h1>OWDC (Online Web Design Competition)</h1>
 
                     <p>
-                        Dalam seri ini, kita akan membangun forum dengan test driven development, yang mana kita akan
-                        mengimplementasikan pest dari pada phpunit, kita juga akan menggunakan inertia disertai dengan
-                        tailwindcss.
+                        OWDC (Online Web Design Competition) merupakan sebuah kompetisi mendesign
+                        sebuah web
+                        baru bagi pelajar SMA dan SMK
+                        sederajat yang bertujuan untuk melihat kemampuan pelajar SMA dan SMK dalam mendesign sebuah
+                        web yang menarik sehingga dapat menarik minat para siswa-siswi SMA dan SMK ke dalam bidang
+                        Teknologi Informasi.
                     </p>
 
-                    <a href="" class="btn btn-primary">Daftar</a>
+                    <a href="https://bit.ly/Regis-OWDC2021" target="blank" class="btn btn-primary">Daftar</a>
                     <!-- <div class="btn"></div> -->
 
                 </div>
