Membuat Alesan Section

--- a/detailEvent.html
+++ b/detailEvent.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HMJ - Manajemen Informatika">
     <meta name="description" content="HMJ - Manajemen Informatika">
-    <title>Membangun Form & Melakukan Integration Testing Dengan JavaScript & ReactJS | HMJ - Manajemen Informatika
+    <title>OWDC (Online Web Design Competition) | HMJ - Manajemen Informatika
     </title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
