--- a/event.html
+++ b/event.html
@@ -64,40 +64,60 @@
 
     <main>
 
-        <!-- heroEvent start -->
-        <!-- <section class="heroEvent" id="one">
-            <div class="container">
-                <h1>Event yang Tersedia</h1>
-                <p>Tantang dirimu dengan mengikuti berbagai macam event yang ada sesuai dengan minat dan keahlianmu!</p>
-
-                <form action="">
-                    <input type="text" id="cari" placeholder="Cari Event...">
-                    <label for="cari"></label>
-                    <button name="cari">
-                        <p>cari</p>
-                    </button>
-                </form>
-            </div>
-        </section> -->
-        <!-- heroEvent end -->
-
-
         <section class="hero pt-15-vh">
             <div class="container">
                 <div class="caption">
-                    <h1>We provide <span>qualified facilities to excel.</span></h1>
-                    <!-- Kami menyediakan fasilitas yang mumpuni untuk berprestasi -->
+                    <h1>Improve Skills Through <span>Event Now!</span>
+                    </h1>
+                    <!-- Tingkatkan Skill Melalui Event Sekarang! -->
                     <p>
-                        Kami menyediakan berbagai macam fasilitas untuk mendukung organisasi ini berjalan dan
-                        berprestasi ditingkat nasional
+                        Daftar dan ikuti event untuk meningkatkan skill dan memberikan solusi digital berdasarkan
+                        kebutuhan dan permasalahan nyata industri saat ini
                     </p>
 
                     <div class="cta">
-                        <a href="series.html" class="btn btn-primary">Explore</a>
+                        <a href="#event" class="btn btn-primary">Lihat Semua Event</a>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="img/hero-img.png" alt="img hero">
+                    <img src="img/3d/1 1.svg" alt="img hero">
+                </div>
+            </div>
+        </section>
+
+
+
+        <section class="containerAlesan pt-100 pb-100">
+            <div class="container">
+                <h1 class="title">Mengapa Harus Ikuti Event?</h1>
+                <div class="alesan">
+                    <div class="perAlesan">
+                        <img src="img/event/why-1.svg" alt="img">
+                        <h2>Meningkatkan Skill</h2>
+                        <p>
+                            Latih skill dan pengalaman serta tingkatkan tingkat kelayakan kerja dengan mengikuti
+                            berbagai event
+                        </p>
+                    </div>
+
+                    <div class="perAlesan">
+                        <img src="img/event/why-2.svg" alt="img">
+                        <h2>Portofolio</h2>
+                        <p>
+                            Simpan karya solutif dalam bentuk portofolio untuk melihat bagaimana problem solving dalam
+                            menyelesaikan permasalahan nyata industri
+                        </p>
+                    </div>
+
+                    <div class="perAlesan">
+                        <img src="img/event/why-3.svg" alt="img">
+                        <h2>Peluang Kerja</h2>
+                        <p>
+                            Hadirkan solusi yang solutif untuk mendapatkan hadiah bahkan peluang kerja dari event yang
+                            ada
+                        </p>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -105,7 +125,7 @@
 
 
         <!-- Event start -->
-        <section class="Event pt-50 pb-100 mb-100">
+        <section class="Event pt-50 pb-100 mb-100" id="event">
             <div class="container">
 
                 <div class="sorting">
