Membuat halaman Artikel

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="event.html">Event</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="community.html">Community</a></li>
                 </ul>
             </nav>
 
@@ -57,7 +57,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="event.html">Event</a></li>
             <li><a href="artikel.html">Artikel</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="community.html">Community</a></li>
         </ul>
     </nav>
 
@@ -523,10 +523,10 @@
                 <div class="box">
                     <h2>Extra</h2>
                     <a href="faq.html">FAQ</a>
+                    <a href="about.html">About</a>
                     <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
                     <a href="visiMisi.html">Visi & Misi</a>
-                    <a href="community.html">Community</a>
                     <a href="PrivacyPolicy.html">Privacy Policy</a>
                     <a href="TermsCondition.html">Terms & Condition</a>
                 </div>
